<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tower">





    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/kj"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.75"
        android:background="@drawable/lin"
        android:orientation="vertical">



        <EditText
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:background="@drawable/login_email"
            android:drawableLeft="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="30sp"
            />
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/white"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.6"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_email"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent1"
                android:textColorHint="@color/white"
                android:textSize="30sp" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox

            android:id="@+id/known"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:textSize="27sp"
            android:layout_alignStart="@+id/kj"
            android:text="@string/rememberme"
            android:textColor="@color/white" />

        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="Unna"
            android:text="@string/login"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorText"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"/>

        <Button
            android:textSize="25sp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/btn"
            android:id="@+id/rigistrator"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/registration"
            android:textColor="@color/colorText"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            />
        <Button
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/resetpassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_alignStart="@+id/kj"
            android:background="@drawable/btn"
            android:text="@string/restorepassword"
            android:textSize="25sp"
            android:textColor="@color/colorText"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>