<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tower"
    >

    <RelativeLayout
        android:id="@+id/top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.18"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/user_vieww"
            />
    </RelativeLayout>
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.75"
        android:layout_height="0dp"
        android:layout_centerVertical="true"

        android:background="@drawable/lin"

        android:orientation="vertical">
        <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/registration"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textColor="@color/colorAccent1"
            android:textStyle="bold|italic" />

        <EditText
            android:textColorHint="@color/white"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:background="@drawable/login_email"
            android:textSize="30sp"

            android:layout_width="match_parent"

            android:id="@+id/name"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"/>



        <EditText
            android:textColorHint="@color/white"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:background="@drawable/login_email"
            android:textSize="30sp"
            android:layout_width="match_parent"

            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorText"/>

        <TextView
            android:textSize="27sp"
            android:id="@+id/country"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/state"
            android:textColor="@color/colorText"
            />
        <Spinner
            android:scrollbarSize="25dp"
            android:id="@+id/lang"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:popupBackground="@color/main"
            android:textAlignment="center"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true">
            <EditText


                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/login_email"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorText"/>




        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/white"

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            app:passwordToggleEnabled="true">
            <EditText

                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/login_email"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password_confirm"
                android:hint="@string/repeatpassword"
                android:inputType="textPassword"
                android:textColor="@color/colorText"/>




        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/regidt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1.5"
            android:background="@drawable/btn"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:text="@string/regist"
            android:textColor="@color/colorText"
            android:textSize="20sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>