<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    >

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/imageView"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/logo"
        />

    <ImageView

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/firebase"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:src="@drawable/logobuilt_white" />

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/developers"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/teacher"
            android:textSize="25sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/place"
            android:textSize="25sp"
            android:textColor="@color/white"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>