<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/tower">
    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.35"
        android:layout_height="0dp"
        android:background="@drawable/lin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/re"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/restoration"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent1"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
        <EditText
            android:textColorHint="@color/white"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:id="@+id/email_send"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/login_email"
            android:drawableLeft="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="30sp"
            />

        <Button
            android:layout_marginBottom="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/send_btn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:text="@string/sendemail"
            android:onClick="SendEmail"
            android:layout_gravity="center"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:background="@drawable/btn"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"

            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>