<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/tower">

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/foto"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/picture"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.3"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>




    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:id="@+id/foto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picture"

        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.4"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/lin"
        android:layout_marginBottom="5dp">

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/choose_from"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/choosepc"
            android:background="@drawable/btn"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:background="@drawable/btn"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:textColor="@color/colorText"
            android:textSize="25sp"

            />

        <Button
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/choose_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/chooseapplibrary"
            android:background="@drawable/btn"
            android:shadowColor="@color/shadow"
            android:shadowDx="4"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>